--- a/app/pages/viewProfile/viewProfile-common.css
+++ b/app/pages/viewProfile/viewProfile-common.css
@@ -10,3 +10,42 @@
 .nomatch {
     color: red;
 }
+.rowMatch {
+    background-color: rgb(133, 224, 133);
+}
+.noRowMatch {
+    background-color: rgb(255, 128, 128);
+}
+.description {
+    font-size: 18;
+}
+.state {
+    font-size: 18;
+}
+.matchPercent {
+    font-size: 24;
+    font-weight: bold;
+}
+.headerText {
+    font-weight: bold;
+    font-size: 20;
+    width: 100%;
+}
+.emphasis {
+    font-size: 18;
+    font-weight: bold; 
+}
+
+.param {
+    font-size: 12;
+}
+.full {
+    width: 100%;
+    height: 100%;
+}
+.left {
+    text-align: left;
+}
+.center {
+    text-align: center;
+}
