--- a/app/pages/landing/landing-common.css
+++ b/app/pages/landing/landing-common.css
@@ -1,19 +1,16 @@
-StackLayout {
-    margin-left: 20;
-    margin-right: 20;
-    padding-bottom: 10;
+GridLayout {
+    margin: 75, 0, 0, 0;
 }
 
-h3 {
-    color: white;
-    border: .1rem solid blue;
+button {
+    border-width: 1;
+    border-color: white;
+    padding: 5;
+    border-radius: 10;
 }
 
-Button {
-    margin-left: 16;
-    margin-right: 16;
-    margin-bottom: 10;
-    background-color: black;
-    color: white;
-    border: .1rem solid blue;
+.logo {
+    font-family: GoodJacket-Regular;
+    margin: -125, 0, 0, 0;
+    font-size: 36;
 }
