--- a/app/pages/login/login-common.css
+++ b/app/pages/login/login-common.css
@@ -14,12 +14,14 @@ TextField {
     font-family: GoodJacket-Regular;
     font-size: 36;
     margin: 30;
+    color: #032443
 }
 
 button {
     border-width: 1;
-    border-color: white;
+    border-color: #032443;
     padding: 5;
     border-radius: 10;
     margin: 15, 0, 0, 0;
+    color: #032443;
 }
